--- a/RentalCars/RentalCars.Infrastructure/RentalCars.Infrastructure.csproj
+++ b/RentalCars/RentalCars.Infrastructure/RentalCars.Infrastructure.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Models\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
