unit tests and repositories were added

--- a/RentalCars/RentalCars.Infrastructure/RentalCars.Infrastructure.csproj
+++ b/RentalCars/RentalCars.Infrastructure/RentalCars.Infrastructure.csproj
@@ -58,6 +58,7 @@
     <PackageReference Include="bootstrap" Version="5.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
  
