--- a/RentalCars/RentalCars.Test/RentalCars.Test.csproj
+++ b/RentalCars/RentalCars.Test/RentalCars.Test.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\RentalCars\RentalCars.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
